--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
-
-"homepage": "https://terranovaeng.github.io/mtel-74-research-os/",{
+{
+  "homepage": "https://terranovaeng.github.io/mtel-74-research-os/",
   "name": "mtel-rocket-sim",
   "private": true,
   "version": "0.0.0",
@@ -9,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -21,19 +22,6 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "gh-pages": "^6.3.0",
-    "globals": "^16.5.0",
-    "vite": "^7.3.1"
-  },
-    "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-}  }
-
+    "gh-pages": "^6.3.0"
+  }
+}
